// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`agent detail correctly syncs with remote 1`] = `
.c10 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
  background-color: #1B1B1B;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 400px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 16px 0px 16px 16px;
  height: 24px;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c4 {
  min-height: 12px;
  min-width: 12px;
  margin: 10px;
  border-radius: 50%;
  color: #C0392B;
  background-color: #C0392B;
}

.c15 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: inherit;
  pointer-events: none;
}

.c15:hover {
  opacity: 0.2;
}

.c16 {
  display: grid;
  grid-template-columns: [image] 50px [content] 1fr;
  grid-template-rows: [title] 1fr [body] 1fr;
  grid-column-gap: 30px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 16px;
  opacity: 0.2;
}

.c18 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column: image;
  grid-row: 1 / 3;
  height: 50px;
  width: 100%;
  color: #02A3EE;
  border: 1px solid #02A3EE;
  border-radius: 5px;
}

.c19 {
  grid-column: content;
  grid-row: title;
  color: #02A3EE;
  margin: 0 0 8px 0;
}

.c20 {
  grid-column: content;
  grid-row: body;
  margin: 0;
  color: #F8F8F8;
}

.c12 {
  width: 100%;
}

.c14 {
  width: 100%;
}

.c14 > div {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
}

.c17 {
  margin: 16px 16px 16px 0;
}

.c0 {
  margin: 32px;
}

.c1 {
  display: grid;
  grid-template-columns: [detail] 1fr [controls] 1fr;
  max-width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  grid-column: detail;
}

.c5 {
  padding-right: 40px;
}

.c8 {
  grid-column: controls;
  width: 100%;
  min-width: 0;
}

.c9 {
  width: 100%;
}

.c6 {
  cursor: pointer;
  margin-right: 10px;
  color: #F8F8F8;
  cursor: inherit;
}

.c7 {
  cursor: inherit;
  margin-top: 16px;
  width: 24px;
  height: 24px;
  color: #363636;
  display: none;
}

.c13 {
  margin-top: 150px;
}

@media (max-width:47.9375em) {
  .c14 > div {
    grid-template-columns: 1fr;
  }
}

@media (max-width:47.9375em) {
  .c9 {
    display: none;
  }
}

@media (max-width:47.9375em) {
  .c7 {
    display: block;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          color="#C0392B"
        />
        <h1>
          agentName
        </h1>
      </div>
      <table>
        <tbody>
          <tr>
            <td
              className="c5"
            >
              <b>
                External IP address
              </b>
            </td>
            <td
              className="c5"
            >
              unknown
            </td>
          </tr>
          <tr>
            <td
              className="c5"
            >
              <b>
                Operating system
              </b>
            </td>
            <td
              className="c5"
            >
              <i
                className="c6 fab fa-apple"
              />
              darwin
            </td>
          </tr>
          <tr>
            <td
              className="c5"
            >
              <b>
                Architecture
              </b>
            </td>
            <td
              className="c5"
            >
              amd64
            </td>
          </tr>
        </tbody>
      </table>
      <i
        className="c7 fas fa-terminal"
        onClick={[Function]}
      />
    </div>
    <div
      className="c8"
    >
      <div
        className="c9"
      >
        <div
          className="c10"
        >
          <div>
            <h2>
              disconnected
            </h2>
          </div>
        </div>
        <div
          className="c11"
        />
      </div>
    </div>
  </div>
  <div
    className="c12 c13"
  >
    <div
      className="c14"
    >
      <h2>
        Enumeration
      </h2>
      <div>
        <a
          className="c15 c16 c17"
          disabled={true}
          href="/agent/fakeid/action/linpeas"
          onClick={[Function]}
        >
          <i
            className="c18 material-icons"
          >
            assessment
          </i>
          <h4
            className="c19"
          >
            Run LinPEAS
          </h4>
          <p
            className="c20"
          >
            LinPEAS is a script that search for possible paths to escalate privileges on Linux/Unix hosts
          </p>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`agent detail deals with property updates correctly 1`] = `
.c10 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
  background-color: #1B1B1B;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 400px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 16px 0px 16px 16px;
  height: 24px;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c4 {
  min-height: 12px;
  min-width: 12px;
  margin: 10px;
  border-radius: 50%;
  color: #C0392B;
  background-color: #C0392B;
}

.c15 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: inherit;
  pointer-events: none;
}

.c15:hover {
  opacity: 0.2;
}

.c16 {
  display: grid;
  grid-template-columns: [image] 50px [content] 1fr;
  grid-template-rows: [title] 1fr [body] 1fr;
  grid-column-gap: 30px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 16px;
  opacity: 0.2;
}

.c18 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column: image;
  grid-row: 1 / 3;
  height: 50px;
  width: 100%;
  color: #02A3EE;
  border: 1px solid #02A3EE;
  border-radius: 5px;
}

.c19 {
  grid-column: content;
  grid-row: title;
  color: #02A3EE;
  margin: 0 0 8px 0;
}

.c20 {
  grid-column: content;
  grid-row: body;
  margin: 0;
  color: #F8F8F8;
}

.c12 {
  width: 100%;
}

.c14 {
  width: 100%;
}

.c14 > div {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
}

.c17 {
  margin: 16px 16px 16px 0;
}

.c0 {
  margin: 32px;
}

.c1 {
  display: grid;
  grid-template-columns: [detail] 1fr [controls] 1fr;
  max-width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  grid-column: detail;
}

.c5 {
  padding-right: 40px;
}

.c8 {
  grid-column: controls;
  width: 100%;
  min-width: 0;
}

.c9 {
  width: 100%;
}

.c6 {
  cursor: pointer;
  margin-right: 10px;
  color: #F8F8F8;
  cursor: inherit;
}

.c7 {
  cursor: inherit;
  margin-top: 16px;
  width: 24px;
  height: 24px;
  color: #363636;
  display: none;
}

.c13 {
  margin-top: 150px;
}

@media (max-width:47.9375em) {
  .c14 > div {
    grid-template-columns: 1fr;
  }
}

@media (max-width:47.9375em) {
  .c9 {
    display: none;
  }
}

@media (max-width:47.9375em) {
  .c7 {
    display: block;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          color="#C0392B"
        />
        <h1>
          newname
        </h1>
      </div>
      <table>
        <tbody>
          <tr>
            <td
              className="c5"
            >
              <b>
                External IP address
              </b>
            </td>
            <td
              className="c5"
            >
              unknown
            </td>
          </tr>
          <tr>
            <td
              className="c5"
            >
              <b>
                Operating system
              </b>
            </td>
            <td
              className="c5"
            >
              <i
                className="c6 fab fa-apple"
              />
              darwin
            </td>
          </tr>
          <tr>
            <td
              className="c5"
            >
              <b>
                Architecture
              </b>
            </td>
            <td
              className="c5"
            >
              amd64
            </td>
          </tr>
        </tbody>
      </table>
      <i
        className="c7 fas fa-terminal"
        onClick={[Function]}
      />
    </div>
    <div
      className="c8"
    >
      <div
        className="c9"
      >
        <div
          className="c10"
        >
          <div>
            <h2>
              disconnected
            </h2>
          </div>
        </div>
        <div
          className="c11"
        />
      </div>
    </div>
  </div>
  <div
    className="c12 c13"
  >
    <div
      className="c14"
    >
      <h2>
        Enumeration
      </h2>
      <div>
        <a
          className="c15 c16 c17"
          disabled={true}
          href="/agent/fakeid/action/linpeas"
          onClick={[Function]}
        >
          <i
            className="c18 material-icons"
          >
            assessment
          </i>
          <h4
            className="c19"
          >
            Run LinPEAS
          </h4>
          <p
            className="c20"
          >
            LinPEAS is a script that search for possible paths to escalate privileges on Linux/Unix hosts
          </p>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`agent detail handles sync failure 1`] = `
.c10 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
  background-color: #1B1B1B;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 400px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 16px 0px 16px 16px;
  height: 24px;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c4 {
  min-height: 12px;
  min-width: 12px;
  margin: 10px;
  border-radius: 50%;
  color: #C0392B;
  background-color: #C0392B;
}

.c15 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: inherit;
  pointer-events: none;
}

.c15:hover {
  opacity: 0.2;
}

.c16 {
  display: grid;
  grid-template-columns: [image] 50px [content] 1fr;
  grid-template-rows: [title] 1fr [body] 1fr;
  grid-column-gap: 30px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 16px;
  opacity: 0.2;
}

.c18 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column: image;
  grid-row: 1 / 3;
  height: 50px;
  width: 100%;
  color: #02A3EE;
  border: 1px solid #02A3EE;
  border-radius: 5px;
}

.c19 {
  grid-column: content;
  grid-row: title;
  color: #02A3EE;
  margin: 0 0 8px 0;
}

.c20 {
  grid-column: content;
  grid-row: body;
  margin: 0;
  color: #F8F8F8;
}

.c12 {
  width: 100%;
}

.c14 {
  width: 100%;
}

.c14 > div {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
}

.c17 {
  margin: 16px 16px 16px 0;
}

.c0 {
  margin: 32px;
}

.c1 {
  display: grid;
  grid-template-columns: [detail] 1fr [controls] 1fr;
  max-width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  grid-column: detail;
}

.c5 {
  padding-right: 40px;
}

.c8 {
  grid-column: controls;
  width: 100%;
  min-width: 0;
}

.c9 {
  width: 100%;
}

.c6 {
  cursor: pointer;
  margin-right: 10px;
  color: #F8F8F8;
  cursor: inherit;
}

.c7 {
  cursor: inherit;
  margin-top: 16px;
  width: 24px;
  height: 24px;
  color: #363636;
  display: none;
}

.c13 {
  margin-top: 150px;
}

@media (max-width:47.9375em) {
  .c14 > div {
    grid-template-columns: 1fr;
  }
}

@media (max-width:47.9375em) {
  .c9 {
    display: none;
  }
}

@media (max-width:47.9375em) {
  .c7 {
    display: block;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          color="#C0392B"
        />
        <h1>
          agentName
        </h1>
      </div>
      <table>
        <tbody>
          <tr>
            <td
              className="c5"
            >
              <b>
                External IP address
              </b>
            </td>
            <td
              className="c5"
            >
              unknown
            </td>
          </tr>
          <tr>
            <td
              className="c5"
            >
              <b>
                Operating system
              </b>
            </td>
            <td
              className="c5"
            >
              <i
                className="c6 fab fa-apple"
              />
              darwin
            </td>
          </tr>
          <tr>
            <td
              className="c5"
            >
              <b>
                Architecture
              </b>
            </td>
            <td
              className="c5"
            >
              amd64
            </td>
          </tr>
        </tbody>
      </table>
      <i
        className="c7 fas fa-terminal"
        onClick={[Function]}
      />
    </div>
    <div
      className="c8"
    >
      <div
        className="c9"
      >
        <div
          className="c10"
        >
          <div>
            <h2>
              disconnected
            </h2>
          </div>
        </div>
        <div
          className="c11"
        />
      </div>
    </div>
  </div>
  <div
    className="c12 c13"
  >
    <div
      className="c14"
    >
      <h2>
        Enumeration
      </h2>
      <div>
        <a
          className="c15 c16 c17"
          disabled={true}
          href="/agent/fakeid/action/linpeas"
          onClick={[Function]}
        >
          <i
            className="c18 material-icons"
          >
            assessment
          </i>
          <h4
            className="c19"
          >
            Run LinPEAS
          </h4>
          <p
            className="c20"
          >
            LinPEAS is a script that search for possible paths to escalate privileges on Linux/Unix hosts
          </p>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`agent detail opens terminal 1`] = `
.c10 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
  background-color: #1B1B1B;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 400px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 16px 0px 16px 16px;
  height: 24px;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c4 {
  min-height: 12px;
  min-width: 12px;
  margin: 10px;
  border-radius: 50%;
  color: #C0392B;
  background-color: #C0392B;
}

.c15 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: inherit;
  pointer-events: none;
}

.c15:hover {
  opacity: 0.2;
}

.c16 {
  display: grid;
  grid-template-columns: [image] 50px [content] 1fr;
  grid-template-rows: [title] 1fr [body] 1fr;
  grid-column-gap: 30px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 16px;
  opacity: 0.2;
}

.c18 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column: image;
  grid-row: 1 / 3;
  height: 50px;
  width: 100%;
  color: #02A3EE;
  border: 1px solid #02A3EE;
  border-radius: 5px;
}

.c19 {
  grid-column: content;
  grid-row: title;
  color: #02A3EE;
  margin: 0 0 8px 0;
}

.c20 {
  grid-column: content;
  grid-row: body;
  margin: 0;
  color: #F8F8F8;
}

.c12 {
  width: 100%;
}

.c14 {
  width: 100%;
}

.c14 > div {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
}

.c17 {
  margin: 16px 16px 16px 0;
}

.c0 {
  margin: 32px;
}

.c1 {
  display: grid;
  grid-template-columns: [detail] 1fr [controls] 1fr;
  max-width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  grid-column: detail;
}

.c5 {
  padding-right: 40px;
}

.c8 {
  grid-column: controls;
  width: 100%;
  min-width: 0;
}

.c9 {
  width: 100%;
}

.c6 {
  cursor: pointer;
  margin-right: 10px;
  color: #F8F8F8;
  cursor: inherit;
}

.c7 {
  cursor: inherit;
  margin-top: 16px;
  width: 24px;
  height: 24px;
  color: #363636;
  display: none;
}

.c13 {
  margin-top: 150px;
}

@media (max-width:47.9375em) {
  .c14 > div {
    grid-template-columns: 1fr;
  }
}

@media (max-width:47.9375em) {
  .c9 {
    display: none;
  }
}

@media (max-width:47.9375em) {
  .c7 {
    display: block;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          color="#C0392B"
        />
        <h1>
          agentName
        </h1>
      </div>
      <table>
        <tbody>
          <tr>
            <td
              className="c5"
            >
              <b>
                External IP address
              </b>
            </td>
            <td
              className="c5"
            >
              unknown
            </td>
          </tr>
          <tr>
            <td
              className="c5"
            >
              <b>
                Operating system
              </b>
            </td>
            <td
              className="c5"
            >
              <i
                className="c6 fab fa-apple"
              />
              darwin
            </td>
          </tr>
          <tr>
            <td
              className="c5"
            >
              <b>
                Architecture
              </b>
            </td>
            <td
              className="c5"
            >
              amd64
            </td>
          </tr>
        </tbody>
      </table>
      <i
        className="c7 fas fa-terminal"
        onClick={[Function]}
      />
    </div>
    <div
      className="c8"
    >
      <div
        className="c9"
      >
        <div
          className="c10"
        >
          <div>
            <h2>
              disconnected
            </h2>
          </div>
        </div>
        <div
          className="c11"
        />
      </div>
    </div>
  </div>
  <div
    className="c12 c13"
  >
    <div
      className="c14"
    >
      <h2>
        Enumeration
      </h2>
      <div>
        <a
          className="c15 c16 c17"
          disabled={true}
          href="/agent/fakeid/action/linpeas"
          onClick={[Function]}
        >
          <i
            className="c18 material-icons"
          >
            assessment
          </i>
          <h4
            className="c19"
          >
            Run LinPEAS
          </h4>
          <p
            className="c20"
          >
            LinPEAS is a script that search for possible paths to escalate privileges on Linux/Unix hosts
          </p>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`agent detail opens terminal 2`] = `
.c10 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
  background-color: #1B1B1B;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 400px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 16px 0px 16px 16px;
  height: 24px;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c4 {
  min-height: 12px;
  min-width: 12px;
  margin: 10px;
  border-radius: 50%;
  color: #C0392B;
  background-color: #C0392B;
}

.c15 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: inherit;
  pointer-events: none;
}

.c15:hover {
  opacity: 0.2;
}

.c16 {
  display: grid;
  grid-template-columns: [image] 50px [content] 1fr;
  grid-template-rows: [title] 1fr [body] 1fr;
  grid-column-gap: 30px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 16px;
  opacity: 0.2;
}

.c18 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column: image;
  grid-row: 1 / 3;
  height: 50px;
  width: 100%;
  color: #02A3EE;
  border: 1px solid #02A3EE;
  border-radius: 5px;
}

.c19 {
  grid-column: content;
  grid-row: title;
  color: #02A3EE;
  margin: 0 0 8px 0;
}

.c20 {
  grid-column: content;
  grid-row: body;
  margin: 0;
  color: #F8F8F8;
}

.c12 {
  width: 100%;
}

.c14 {
  width: 100%;
}

.c14 > div {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
}

.c17 {
  margin: 16px 16px 16px 0;
}

.c0 {
  margin: 32px;
}

.c1 {
  display: grid;
  grid-template-columns: [detail] 1fr [controls] 1fr;
  max-width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  grid-column: detail;
}

.c5 {
  padding-right: 40px;
}

.c8 {
  grid-column: controls;
  width: 100%;
  min-width: 0;
}

.c9 {
  width: 100%;
}

.c6 {
  cursor: pointer;
  margin-right: 10px;
  color: #F8F8F8;
  cursor: inherit;
}

.c7 {
  cursor: inherit;
  margin-top: 16px;
  width: 24px;
  height: 24px;
  color: #363636;
  display: none;
}

.c13 {
  margin-top: 150px;
}

@media (max-width:47.9375em) {
  .c14 > div {
    grid-template-columns: 1fr;
  }
}

@media (max-width:47.9375em) {
  .c9 {
    display: none;
  }
}

@media (max-width:47.9375em) {
  .c7 {
    display: block;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          color="#C0392B"
        />
        <h1>
          agentName
        </h1>
      </div>
      <table>
        <tbody>
          <tr>
            <td
              className="c5"
            >
              <b>
                External IP address
              </b>
            </td>
            <td
              className="c5"
            >
              unknown
            </td>
          </tr>
          <tr>
            <td
              className="c5"
            >
              <b>
                Operating system
              </b>
            </td>
            <td
              className="c5"
            >
              <i
                className="c6 fab fa-apple"
              />
              darwin
            </td>
          </tr>
          <tr>
            <td
              className="c5"
            >
              <b>
                Architecture
              </b>
            </td>
            <td
              className="c5"
            >
              amd64
            </td>
          </tr>
        </tbody>
      </table>
      <i
        className="c7 fas fa-terminal"
        onClick={[Function]}
      />
    </div>
    <div
      className="c8"
    >
      <div
        className="c9"
      >
        <div
          className="c10"
        >
          <div>
            <h2>
              disconnected
            </h2>
          </div>
        </div>
        <div
          className="c11"
        />
      </div>
    </div>
  </div>
  <div
    className="c12 c13"
  >
    <div
      className="c14"
    >
      <h2>
        Enumeration
      </h2>
      <div>
        <a
          className="c15 c16 c17"
          disabled={true}
          href="/agent/fakeid/action/linpeas"
          onClick={[Function]}
        >
          <i
            className="c18 material-icons"
          >
            assessment
          </i>
          <h4
            className="c19"
          >
            Run LinPEAS
          </h4>
          <p
            className="c20"
          >
            LinPEAS is a script that search for possible paths to escalate privileges on Linux/Unix hosts
          </p>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`agent detail opens terminal 3`] = `
<div
  className="sc-fzqARJ iuGSwY"
>
  <div
    className="sc-fzqNqU bDSmdZ"
  >
    <div
      className="sc-fzoNJl dDjYGa"
    >
      <div
        className="sc-fzoyTs fEcysN"
      >
        <div
          className="sc-fzoLsD jZMuGW"
          color="#C0392B"
        />
        <h1>
          agentName
        </h1>
      </div>
      <table>
        <tbody>
          <tr>
            <td
              className="sc-fzoXWK ruPLA"
            >
              <b>
                External IP address
              </b>
            </td>
            <td
              className="sc-fzoXWK ruPLA"
            >
              unknown
            </td>
          </tr>
          <tr>
            <td
              className="sc-fzoXWK ruPLA"
            >
              <b>
                Operating system
              </b>
            </td>
            <td
              className="sc-fzoXWK ruPLA"
            >
              <i
                className="sc-AxjAm sc-fznMAR jaccxL fab fa-apple"
              />
              darwin
            </td>
          </tr>
          <tr>
            <td
              className="sc-fzoXWK ruPLA"
            >
              <b>
                Architecture
              </b>
            </td>
            <td
              className="sc-fzoXWK ruPLA"
            >
              amd64
            </td>
          </tr>
        </tbody>
      </table>
      <i
        className="sc-AxjAm sc-fznWOq cLLLHm fas fa-terminal"
        onClick={[Function]}
      />
    </div>
    <div
      className="sc-fzpmMD ghLLDH"
    >
      <div
        className="sc-fznxKY cLKlRY"
      >
        <div
          className="sc-AxirZ sc-AxheI iasZbb"
        >
          <div>
            <h2>
              disconnected
            </h2>
          </div>
        </div>
        <div
          className="sc-AxmLO lcomMa"
        />
      </div>
    </div>
  </div>
  <div
    className="sc-fzokOt bjmRIa sc-fzolEj iujTBr"
  >
    <div
      className="sc-fzqNJr iKYGjY"
    >
      <h2>
        Enumeration
      </h2>
      <div>
        <a
          className="sc-fzpans jnuHzE sc-fzplWN dsNVAP sc-fzoyAV cVEmlz"
          disabled={true}
          href="/agent/fakeid/action/linpeas"
          onClick={[Function]}
        >
          <i
            className="sc-fznyAO kNRnzM material-icons"
          >
            assessment
          </i>
          <h4
            className="sc-fznKkj pWBOS"
          >
            Run LinPEAS
          </h4>
          <p
            className="sc-fznZeY cRuoVs"
          >
            LinPEAS is a script that search for possible paths to escalate privileges on Linux/Unix hosts
          </p>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`agent detail renders correctly 1`] = `
.c10 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
  background-color: #1B1B1B;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 400px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 16px 0px 16px 16px;
  height: 24px;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c4 {
  min-height: 12px;
  min-width: 12px;
  margin: 10px;
  border-radius: 50%;
  color: #C0392B;
  background-color: #C0392B;
}

.c15 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: inherit;
  pointer-events: none;
}

.c15:hover {
  opacity: 0.2;
}

.c16 {
  display: grid;
  grid-template-columns: [image] 50px [content] 1fr;
  grid-template-rows: [title] 1fr [body] 1fr;
  grid-column-gap: 30px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 16px;
  opacity: 0.2;
}

.c18 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column: image;
  grid-row: 1 / 3;
  height: 50px;
  width: 100%;
  color: #02A3EE;
  border: 1px solid #02A3EE;
  border-radius: 5px;
}

.c19 {
  grid-column: content;
  grid-row: title;
  color: #02A3EE;
  margin: 0 0 8px 0;
}

.c20 {
  grid-column: content;
  grid-row: body;
  margin: 0;
  color: #F8F8F8;
}

.c12 {
  width: 100%;
}

.c14 {
  width: 100%;
}

.c14 > div {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
}

.c17 {
  margin: 16px 16px 16px 0;
}

.c0 {
  margin: 32px;
}

.c1 {
  display: grid;
  grid-template-columns: [detail] 1fr [controls] 1fr;
  max-width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  grid-column: detail;
}

.c5 {
  padding-right: 40px;
}

.c8 {
  grid-column: controls;
  width: 100%;
  min-width: 0;
}

.c9 {
  width: 100%;
}

.c6 {
  cursor: pointer;
  margin-right: 10px;
  color: #F8F8F8;
  cursor: inherit;
}

.c7 {
  cursor: inherit;
  margin-top: 16px;
  width: 24px;
  height: 24px;
  color: #363636;
  display: none;
}

.c13 {
  margin-top: 150px;
}

@media (max-width:47.9375em) {
  .c14 > div {
    grid-template-columns: 1fr;
  }
}

@media (max-width:47.9375em) {
  .c9 {
    display: none;
  }
}

@media (max-width:47.9375em) {
  .c7 {
    display: block;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          color="#C0392B"
        />
        <h1>
          agentName
        </h1>
      </div>
      <table>
        <tbody>
          <tr>
            <td
              className="c5"
            >
              <b>
                External IP address
              </b>
            </td>
            <td
              className="c5"
            >
              unknown
            </td>
          </tr>
          <tr>
            <td
              className="c5"
            >
              <b>
                Operating system
              </b>
            </td>
            <td
              className="c5"
            >
              <i
                className="c6 fab fa-apple"
              />
              darwin
            </td>
          </tr>
          <tr>
            <td
              className="c5"
            >
              <b>
                Architecture
              </b>
            </td>
            <td
              className="c5"
            >
              amd64
            </td>
          </tr>
        </tbody>
      </table>
      <i
        className="c7 fas fa-terminal"
        onClick={[Function]}
      />
    </div>
    <div
      className="c8"
    >
      <div
        className="c9"
      >
        <div
          className="c10"
        >
          <div>
            <h2>
              disconnected
            </h2>
          </div>
        </div>
        <div
          className="c11"
        />
      </div>
    </div>
  </div>
  <div
    className="c12 c13"
  >
    <div
      className="c14"
    >
      <h2>
        Enumeration
      </h2>
      <div>
        <a
          className="c15 c16 c17"
          disabled={true}
          href="/agent/fakeid/action/linpeas"
          onClick={[Function]}
        >
          <i
            className="c18 material-icons"
          >
            assessment
          </i>
          <h4
            className="c19"
          >
            Run LinPEAS
          </h4>
          <p
            className="c20"
          >
            LinPEAS is a script that search for possible paths to escalate privileges on Linux/Unix hosts
          </p>
        </a>
      </div>
    </div>
  </div>
</div>
`;
